fixes along the way and delete IdentifierExtractorEventHandler